# reversi

./: CMakeLists.txt
resources/: CMakeLists.txt  resources.rc
src/: BoardWindow.cpp  BoardWindow.h  BoardWndClass.cpp  BoardWndClass.h  CMakeLists.txt  Game.cpp  Game.h  MainWindow.cpp  MainWindow.h  MessageWndClass.cpp  MessageWndClass.h  Position.cpp  Position.h  ReversiWndClass.cpp  ReversiWndClass.h  StatusWindow.cpp  StatusWindow.h  TestWindow.cpp  TestWindow.h  Window.cpp  Window.h  board_window.cpp  board_window.h  game.cpp  game.h  main.cpp  main.h  main_window.cpp  main_window.h  pch.h  resource.h  targetver.h  test_window.cpp  test_window.h
